apps/frontend/overlays/dev/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          image: 329551316753.dkr.ecr.us-east-1.amazonaws.com/jimag-dev-car-website-frontend:dev-PLACEHOLDER
